# lambda-authorizer-tf

./: .gitignore  Dockerfile.authorizer  Dockerfile.handler  Makefile  README.md  main.tf  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
src/: authorizer.py  handler.py
tests/: test_authorizer.py  test_handler.py
