[tool.poetry]
name = "lambda-authorizer-tf"
version = "0.1.0"
description = ""
authors = ["jmeisele <jmeisele@yahoo.com>"]
readme = "README.md"
packages = [{include = "lambda_authorizer_tf"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
boto3 = "^1.26.104"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.2"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
